docs: add demo to quickly bootstrap project in local

--- a/.traefik.yml
+++ b/.traefik.yml
@@ -1,7 +1,7 @@
 displayName: Demo Plugin
 type: middleware
 
-import: github.com/traefik/plugindemo
+import: github.com/agravelot/plugindemo
 
 summary: '[Demo] Add Request Header'
 
