feat: add first working convertion

--- a/demo/frontend/Dockerfile
+++ b/demo/frontend/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx
 
-COPY index.html /usr/share/nginx/html/index.html
+COPY index.html /usr/share/nginx/html/
+COPY *.jpg /usr/share/nginx/html/
