--- a/demo/frontend/docker-compose.yml
+++ b/demo/frontend/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     - "traefik.http.routers.demo.rule=Host(`demo.localhost`)"
     - "traefik.http.middlewares.image_optimizer.plugin.dev.foo=bar"
     - "traefik.http.middlewares.image_optimizer.plugin.dev.config.processor=imaginary"
+    - "traefik.http.middlewares.image_optimizer.plugin.dev.config.imaginary.url=http://imaginary:9000"
     - "traefik.http.routers.demo.middlewares=image_optimizer"
 
 networks:
