--- a/.traefik.yml
+++ b/.traefik.yml
@@ -6,6 +6,8 @@ import: github.com/agravelot/image_optimizer
 summary: 'Image optimizer middleware is a middleware designed to optimize image responses on the fly.'
 
 testData:
+  Headers:
+    Foo: Bar
   config:
     processor: none
     cache: none
