--- a/demo/frontend/docker-compose.yml
+++ b/demo/frontend/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     labels:
     - "traefik.enable=true"
     - "traefik.http.routers.demo.rule=Host(`demo.localhost`)"
-    - "traefik.http.middlewares.image_optimizer.plugin.dev.config.processor=imaginary"
-    - "traefik.http.middlewares.image_optimizer.plugin.dev.config.imaginary.url=http://imaginary:9000"
-    - "traefik.http.middlewares.image_optimizer.plugin.dev.config.cache=file"
-    - "traefik.http.middlewares.image_optimizer.plugin.dev.config.file.path=/root"
-    - "traefik.http.routers.demo.middlewares=image_optimizer"
+    - "traefik.http.middlewares.imageopti.plugin.dev.config.processor=imaginary"
+    - "traefik.http.middlewares.imageopti.plugin.dev.config.imaginary.url=http://imaginary:9000"
+    - "traefik.http.middlewares.imageopti.plugin.dev.config.cache=file"
+    - "traefik.http.middlewares.imageopti.plugin.dev.config.file.path=/root"
+    - "traefik.http.routers.demo.middlewares=imageopti"
 
 networks:
   traefik-net:
