style: config linter to ignore todo messages

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -37,6 +37,10 @@
     "paralleltest",
     "tparallel",
     "scopelint",
+    "godox",
+    "funlen", # Re-enable it
+    "gocognit", # Re-enable it
+    "cyclop", # Re-enable it
   ]
 
 [issues]
