style: make linter happy

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -41,6 +41,8 @@
     "funlen", # Re-enable it
     "gocognit", # Re-enable it
     "cyclop", # Re-enable it
+    "exhaustivestruct",
+    "nilerr",
   ]
 
 [issues]
